trunk/Archive2/f5/f3d59dfa0463b2/output
main.cpp:1:22: error: use of undeclared identifier 'std'
template<typename T, std::size_t tag, typename = typename std::enable_if<std::is_convertible<ComponentType, T>::value>::type>
                     ^
main.cpp:1:59: error: use of undeclared identifier 'std'
template<typename T, std::size_t tag, typename = typename std::enable_if<std::is_convertible<ComponentType, T>::value>::type>
                                                          ^
main.cpp:1:64: error: expected a qualified name after 'typename'
template<typename T, std::size_t tag, typename = typename std::enable_if<std::is_convertible<ComponentType, T>::value>::type>
                                                               ^
main.cpp:1:64: error: type-id cannot have a name
template<typename T, std::size_t tag, typename = typename std::enable_if<std::is_convertible<ComponentType, T>::value>::type>
                                                               ^~~~~~~~~
main.cpp:1:73: error: expected ',' or '>' in template-parameter-list
template<typename T, std::size_t tag, typename = typename std::enable_if<std::is_convertible<ComponentType, T>::value>::type>
                                                                        ^
main.cpp:1:107: error: expected unqualified-id
template<typename T, std::size_t tag, typename = typename std::enable_if<std::is_convertible<ComponentType, T>::value>::type>
                                                                                                          ^
6 errors generated.
